Assets/css/events.css
.navbar{
    background: #040a3c;
    position: relative; /* Add position to use z-index */
    z-index: 1050; /* A high index ensures it's on top of other content */

}



.event-card {
    position: relative; /* Relative positioning for absolute positioning of the button */
    margin-top: 50px;
    background: linear-gradient(to right, rgba(17, 16, 107, 0.84), rgba(2, 0, 113, 0.22)), url("../images/fair.jpg");

    margin-bottom: 20px;
    background-size: cover;
    background-position: center;
    width: 973px;
    height: 481px;
    color: #ffffff;
    text-align: left;
}
.event-card-image-trace2023{
    background: linear-gradient(to right, rgba(17, 16, 107, 0.84), rgba(2, 0, 113, 0.22)), url("../images/trace-group-photo.png");
    background-size: cover;
    background-position: center;

}

.event-card-image-tracetour{
    background: linear-gradient(to right, rgba(17, 16, 107, 0.84), rgba(2, 0, 113, 0.22)), url("../images/trace-tour-cover.png");
    background-size: cover;
    background-position: center;

}

.event-card-image-gpp{
    background: linear-gradient(to right, rgba(17, 16, 107, 0.84), rgba(2, 0, 113, 0.22)), url("../images/fscit_1.jpg");
    background-size: cover;
    background-position: center;
}

.event-card:hover {
    transform: scale(1.05); /* Scales up the card by 5% on hover */
}

/* Keyframes for additional smoothness and responsiveness */
@keyframes scaleUp {
    from {
        transform: scale(1.0);
    }
    to {
        transform: scale(1.05);
    }
}

.event-card:hover {
    animation: scaleUp 0.5s forwards; /* Uses the keyframes for animation on hover */
}

.event-text {
    height: 100%;
    padding-top: 180px;
    padding-left: 80px;
    font-family: "SF Pro Display Medium", sans-serif;
    font-size: 45px;
}

.container-button {
    position: absolute; /* Absolute positioning relative to the nearest positioned ancestor (event-card) */
    bottom: 50px; /* 20px from the bottom */
    right: 30px; /* 20px from the right */
}


.card-pos{
    display: flex;
    justify-content: center;
    align-items: center;

}

.line-white {
    height: 10px; /* Specifies the thickness of the line */
    width: 91px; /* Adjust the width as necessary */
    background-color: #fff; /* White color line */
    margin-top: 20px; /* Space between the text and the line */
}

.event-title{
    margin-top:40px;
    font-size: 41px;
    font-weight: bold;
    font-family: "SF Pro Display Medium", sans-serif;
    text-align: center;
    color: #040a3c;
}

.event-text-pages{
    height: 100%;
    padding-top: 90px;
    padding-left: 80px;
    font-family: "SF Pro Display Medium", sans-serif;
    font-size: 45px
}

.event-details-gpp{
    margin-top: 50px;
    width: auto;
    height: auto ;
    overflow: hidden;
    flex-shrink: 0;
}

.event-details-gpp img{
    width: 100%;
    height: auto;
}

.tentative-button{
    background-color: #010953;
    color: white;
    font-size: 20px;
    font-weight: bold;
    padding: 10px 20px;
    border-radius: 0px;
    border: none;
    width: 100%;
    margin-top: 20px;
}

.tentative-button:hover{
    background-color: #9fa9ff;
    color: #010953;
    animation: ease-in-out 0.3ms;


}

/* Lightbox styles */
.lightbox {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1000; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgba(0, 0, 0, 0.8); /* Black w/ opacity */
}

.lightbox-content {
    background-color: #fefefe;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #888;
    width: 80%; /* Could be more or less, depending on screen size */
}

.lightbox-close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.lightbox-close:hover,
.lightbox-close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

@media (max-width: 1000px) {
    .event-card {
        height: auto;
        width: 100%;
        margin-top: 20px;
    }

    .event-text {
        padding-left: 20px;
        font-size: 30px;
        padding-top: 100px;
    }

    .container-button {
        bottom: 30px;
        right: 20px;
    }

    .key-figures {
        height: auto;  /* Allow the container to expand as needed */
    }
    .key-figures .row {
        flex-direction: column;  /* Stack key figures boxes in a column */
        align-items: center;     /* Center the boxes */
    }
    .key-figures-box {
        width: 80%;    /* Adjust width for mobile */
        margin-left: 0;
    }

}

@media (max-width: 1000px) {
    .event-card {
        height: auto;
        width: 100%;
        margin-top: 20px;
    }

    .event-text {
        padding-left: 15px;
        font-size: 25px;
        padding-top: 80px;
        padding-bottom: 80px;
    }

    .container-button {
        bottom: 20px;
        right: 10px;
    }

    .event-title {
        font-size: 30px;
    }

    .event-text-pages {
        font-size: 35px;
    }

    .tentative-button {
        font-size: 18px;
        padding: 8px 16px;
    }

    .learn-more-btn{
        font-size: 18px;
        padding: 10px 16px;
    }

    .key-figures {
        height: auto;  /* Allow the container to expand as needed */
    }
    .key-figures .row {
        flex-direction: column;  /* Stack key figures boxes in a column */
        align-items: center;     /* Center the boxes */
    }
    .key-figures-box {
        width: 80%;    /* Adjust width for mobile */
        margin-left: 0;
    }


    .subtext-trace{
        height: fit-content;
        padding-bottom: 90px;
    }
}

.hero-title-container {
    background: linear-gradient(rgba(4, 10, 60, 0.59), rgba(4, 10, 60, 0.59)), url('../images/fair.jpg');    background-size: cover;
    background-position: center;
    height: 80vh;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #ffffff;
    text-align: center;
    margin: auto;
    width: 100%; /* Ensures the container takes full width */
}

.hero-title-text h1{
    font-size: 80px;
    text-align: center; /* Center the text horizontally */
    font-family: "NEXT ART", sans-serif;
font-weight: bold;

}

.key-figures {
    background: linear-gradient(rgba(0, 47, 255, 0.2), rgba(7, 34, 126, 0.2)), url("../images/background.png");
    background-size: cover;
    background-position: center;
    padding: 50px 0;
}


.key-figures-title{
    font-size: 54px;
    font-weight: bold;
    font-family: "SF Pro Display Medium", sans-serif;
    color: #fff;
}

.line-white{
    height: 10px;             /* Specifies the thickness of the line */
    width: 91px;              /* Adjust the width as necessary */
    background-color: #fff; /* Change the color to match your site's theme, #0056b3 is a shade of blue */
    margin-top:26px;
}

.key-figures-box{
    background-color: #0E4E69;
    padding: 20px;
    margin-top: 20px;
    margin-left: 20px;
    height: 210px;
    width: 236px;
    color: white;
}
.key-figures-icon{
    font-size: 50px;
    color: #FFC107;
    width: 40px;
    height: 40px;
    margin-bottom: 60px;
}
.key-figures-number{
    font-family: "SF Pro Display Medium", sans-serif;
    font-weight: bold;

}

.key-figures-parent{
    display: flex;
    justify-content: flex-end; /* Aligns children (the icon) to the right */
    align-items: center; /* Optional: aligns children vertically in the middle */
}


.image-container{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto; /* Center the container horizontally */
    width: 80%; /* Set the width of the container */
    overflow: hidden;
    flex-shrink: 0;
}
.image-container img{
    height: auto;
    width: 100%;
    max-width: 100%;

}

.hero-title-text h2{
    font-family: "SF Pro Display Bold", sans-serif;

}


.guidebook-image-container{
    width: auto;
    overflow: hidden;
    flex-shrink: 0;
}
.guidebook-image-container img{
    width: 100%;
    height: auto;
    margin-bottom: 10px;


}

.guidebook-link {
    margin-top: 10px;
    display: block;
    width: 100%;
    padding: 0;
}

.guidebook-btn {
    margin-top: 10px;

    font-size: 15px;
    font-weight: 500;
    color: #ffffff;
    width: 100%; /* Make the button take the full width of its parent */
    background: #040a3c;
    padding: 20px 10px;
    border: none;
    cursor: pointer;
    transition: background 0.3s ease, color 0.3s ease; /* Smooth transition for background and color */
    display: block; /* Make the button a block element */
}

.event-details-trace2024{
    width: auto;
    height: auto ;
    overflow: hidden;
    flex-shrink: 0;
    background: #f2f5f9;
    padding-top: 90px;
    padding-bottom: 90px;
}

.guidebook-info{
 }
.image-container-booth{
    width: auto;
    height: auto ;
    overflow: hidden;
    flex-shrink: 0;
    padding-top: 90px;
    padding-bottom: 90px;

}

.guidebook-section{
    background: #f2f5f9;
    padding-top: 60px;
    padding-bottom: 60px;
}

.image-container-booth img{
    width: 100%;
    height: auto;
}

.booth-info-title {
    font-size: 50px;
    font-weight: bold;
    font-family: "SF Pro Display Medium", sans-serif;
    text-align: center;
    color: #040a3c;
    margin-top: 40px;
}


.booth-section{
    background: #f2f5f9;
}

.subtext-trace{
    font-size: 20px;
    font-family: "SF Pro Display Regular", sans-serif;
    height: 50vh;
    margin-top: 80px;
}
.subtext-title{
    font-size: 54px;
    font-weight: bold;
    font-family: "SF Pro Display Medium", sans-serif;
}

.subtext-description{
    font-size: 24px;
    font-family: "SF Pro Display Light", sans-serif;
    margin-bottom: 50px;
}

.subtext-p{
    font-size: 20px;
    color: rgba(68, 68, 101, 0.83);
}

.line-blue {
    height: 10px;             /* Specifies the thickness of the line */
    width: 91px;              /* Adjust the width as necessary */
    background-color: #040a3c; /* Change the color to match your site's theme, #0056b3 is a shade of blue */
    margin-top:26px;

}

.tentative-section{
    padding-top: 50px;
    padding-bottom: 50px;
}

.tentative-schedule-title{
    font-size: 54px;
    font-weight: bold;
    font-family: "SF Pro Display Medium", sans-serif;
}

.guidebook-title{
    font-size: 40px;
    margin-bottom: 40px;
    font-weight: bold;
    font-family: "SF Pro Display Medium", sans-serif;
}

.tentative-schedule-subtitle{
    font-size: 30px;
    font-family: "SF Pro Display Medium", sans-serif;
    margin-top: 20px;
}

